--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"not implemented yet\"",
-    "build-abi": "typechain --target=web3-v1 ./src/abis/*.json ./typechain-types --ts-nocheck",
-    "prepublish": "npm run build-api"
+    "build-abi": "typechain --target oken ./src/abis/*.json ./typechain-types --ts-nocheck",
+    "prepare": "npm run build-abi"
   },
   "repository": {
     "type": "git",
@@ -30,7 +30,7 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@typechain/web3-v1": "^6.0.2",
-    "typechain": "^8.1.1"
+    "@typechain/web3-v1": "^6.0.3",
+    "typechain": "^8.2.0"
   }
 }
