--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "oken-waas",
   "version": "1.8.20",
   "description": "Oken Wallet as a Service SDK",
-  "main": "index.js",
+  "main": "dist/src/index.js",
   "scripts": {
     "test": "echo \"not implemented yet\"",
+    "build": "tsc --build",
+    "bundle": "npm-dts",
     "build-abi": "typechain --target oken ./src/abis/*.json ./typechain-types --ts-nocheck",
-    "prepare": "npm run build-abi"
+    "watch": "tsc --build --watch",
+    "prepare": "npm run build-abi && npm run build && npm run bundle"
   },
   "repository": {
     "type": "git",
@@ -16,7 +19,7 @@
     "oken",
     "waas"
   ],
-  "types": "src/types.d.ts",
+  "types": "types/oken-contracts/index.d.ts",
   "author": "OnePercent",
   "license": "ISC",
   "bugs": {
@@ -24,13 +27,14 @@
   },
   "homepage": "https://github.com/onepercentio/oken-waas-sdk-js#readme",
   "dependencies": {
-    "axios": "^0.21.1",
+    "axios": "^1.4.0",
     "axios-error": "^1.0.4",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@typechain/web3-v1": "^6.0.3",
+    "npm-dts": "^1.3.12",
     "typechain": "^8.2.0"
   }
 }
