--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "main": "dist/src/index.js",
   "scripts": {
     "test": "echo \"not implemented yet\"",
-    "build": "tsc --build",
-    "bundle": "npm-dts",
+    "build": "tsc",
     "build-abi": "typechain --target oken ./src/abis/*.json ./typechain-types --ts-nocheck",
-    "watch": "tsc --build --watch",
-    "prepare": "npm run build-abi && npm run build && npm run bundle"
+    "watch": "tsc --watch",
+    "prepare": "npm run build-abi && npm run build"
   },
   "repository": {
     "type": "git",
@@ -19,7 +18,7 @@
     "oken",
     "waas"
   ],
-  "types": "types/oken-contracts/index.d.ts",
+  "types": "./dist/src/index.d.ts",
   "author": "OnePercent",
   "license": "ISC",
   "bugs": {
@@ -30,11 +29,13 @@
     "axios": "^1.4.0",
     "axios-error": "^1.0.4",
     "jsonwebtoken": "^9.0.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "remove": "^0.1.5"
   },
   "devDependencies": {
     "@typechain/web3-v1": "^6.0.3",
-    "npm-dts": "^1.3.12",
+    "dts-gen": "^0.6.1",
+    "dts-generator": "^3.0.0",
     "typechain": "^8.2.0"
   }
 }
