--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "test": "echo \"not implemented yet\"",
     "build": "tsc",
     "build-abi": "typechain --target oken ./src/abis/*.json ./typechain-types --ts-nocheck",
+    "build-exports": "ts-node src/contracts/codegen.ts",
     "watch": "tsc --watch",
-    "prepare": "npm run build-abi && npm run build"
+    "prepare": "npm run build-abi && npm run build-exports && npm run build"
   },
   "repository": {
     "type": "git",
@@ -36,6 +37,7 @@
     "@typechain/web3-v1": "^6.0.3",
     "dts-gen": "^0.6.1",
     "dts-generator": "^3.0.0",
+    "ts-node": "^10.9.1",
     "typechain": "^8.2.0"
   }
 }
