--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Oken Wallet as a Service SDK",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"not implemented yet\"",
+    "test": "bun test",
     "build": "tsc --project tsconfig.json && cp -r oken-types dist",
     "build-abi": "typechain --target oken ./src/abis/*.json",
     "build-exports": "ts-node src/contracts/codegen.ts",
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@typechain/web3-v1": "^6.0.3",
+    "@types/bun": "^1.1.11",
     "@types/jsonwebtoken": "^9.0.2",
     "dts-gen": "^0.6.1",
     "dts-generator": "^3.0.0",
